--- a/index.html
+++ b/index.html
@@ -1,184 +1,264 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Money Tree</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-  href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-  rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/@icon/themify-icons/themify-icons.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/@icon/themify-icons/themify-icons.css">
 
-  <script lang="js">
+    <script lang="js">
 
-  function getCurrentDate() {
-      const now = new Date();
-      return `${now.getMonth() + 1}/${now.getDate()}/${now.getFullYear()}`;
-  }
-
-  // Parse date string in MM/DD/YYYY format
-  function parseDate(str) {
-      const [month, day, year] = str.split('/').map(Number);
-      return new Date(year, month - 1, day);
-  }
-
-  // Calculate difference in days between two dates
-  function dateDiff(first, second) {
-      const timeDiff = second.getTime() - first.getTime();
-      return Math.round(timeDiff / (1000 * 60 * 60 * 24));
-  }
-
-
-  let transaction_list = [
-      { "date": "4/1", "amount": "-15", "type": "neg" },
-      { "date": "4/2", "amount": "+200", "type": "pos" },
-      { "date": "4/3", "amount": "-30", "type": "neg" },
-      { "date": "4/4", "amount": "-8", "type": "neg" },
-      { "date": "4/5", "amount": "+75", "type": "pos" },
-      { "date": "4/6", "amount": "-22", "type": "neg" },
-      { "date": "4/7", "amount": "+150", "type": "pos" },
-      { "date": "4/8", "amount": "-45", "type": "neg" },
-      { "date": "4/9", "amount": "-12", "type": "neg" },
-      { "date": "4/10", "amount": "-10", "type": "neg" },
-      { "date": "4/11", "amount": "+50", "type": "pos" },
-      { "date": "4/12", "amount": "-25", "type": "neg" },
-      { "date": "4/13", "amount": "-5", "type": "neg" },
-      { "date": "4/14", "amount": "+100", "type": "pos" },
-      { "date": "4/15", "amount": "-18", "type": "neg" },
-      { "date": "4/16", "amount": "+80", "type": "pos" },
-      { "date": "4/17", "amount": "-33", "type": "neg" },
-      { "date": "4/18", "amount": "-7", "type": "neg" }
-    ]
-
-  let days_remaining = dateDiff(parseDate(getCurrentDate()), parseDate("12/20/2024"));
-
-    function getLocal() {
-      // document.getElementById('inTotal').focus();
-      document.getElementById('cA').innerHTML = amount;
-      document.getElementById('date').innerHTML = getCurrentDate();
-      document.getElementById('dayRemaing').innerHTML = "\n" + days_remaining
-
-      let new_item = "";
-      for (let i = 0; i < transaction_list.length; i++){
-        new_item += `
-          <div class="trans_list_item">
-          <p>${transaction_list[i].date}</p>
-          <p style="color:${transaction_list[i].type == "pos" ? "green" : "red"}">${transaction_list[i].amount}</p>
-          <i class="ti ti-trash" style="font-size:1em;color:red"></i>
-          </div>
-        `
-      }
-      document.getElementById('trans_list').innerHTML = new_item
-
-      //Unused rn (localStorage)
-      if (typeof(Storage) !== "undefined") {
-        for (var i = 0; i < localStorage.length; i++){
-          console.log("STORAGE:\n")
-          console.log(localStorage.key(i))
-            // do something with localStorage.getItem(localStorage.key(i));
-        }
-      } else {
-        console.log("no localStorage support");
-      }
+    function getCurrentDate() {
+        const now = new Date();
+        return `${now.getMonth() + 1}/${now.getDate()}/${now.getFullYear()}`;
     }
 
-  </script>
-  </head>
-  <body onload="getLocal()">
+    // Parse date string in MM/DD/YYYY format
+    function parseDate(str) {
+        const [month, day, year] = str.split('/').map(Number);
+        return new Date(year, month - 1, day);
+    }
+
+    // Calculate difference in days between two dates
+    function dateDiff(first, second) {
+        const timeDiff = second.getTime() - first.getTime();
+        return Math.round(timeDiff / (1000 * 60 * 60 * 24));
+    }
+
+    let init = 2925;
+    let transaction_list_prod = [];
+    let typing = "pos";
+
+    let transaction_list = [
+        { "date": "4/1", "amount": "-15", "type": "neg" },
+        { "date": "4/2", "amount": "+200", "type": "pos" },
+        { "date": "4/3", "amount": "-30", "type": "neg" },
+        { "date": "4/4", "amount": "-8", "type": "neg" },
+        { "date": "4/5", "amount": "+75", "type": "pos" },
+        { "date": "4/6", "amount": "-22", "type": "neg" },
+        { "date": "4/7", "amount": "+150", "type": "pos" },
+        { "date": "4/8", "amount": "-45", "type": "neg" },
+        { "date": "4/9", "amount": "-12", "type": "neg" },
+        { "date": "4/10", "amount": "-10", "type": "neg" },
+        { "date": "4/11", "amount": "+50", "type": "pos" },
+        { "date": "4/12", "amount": "-25", "type": "neg" },
+        { "date": "4/13", "amount": "-5", "type": "neg" },
+        { "date": "4/14", "amount": "+100", "type": "pos" },
+        { "date": "4/15", "amount": "-18", "type": "neg" },
+        { "date": "4/16", "amount": "+80", "type": "pos" },
+        { "date": "4/17", "amount": "-33", "type": "neg" },
+        { "date": "4/18", "amount": "-7", "type": "neg" }
+    ]
+
+    let days_remaining = dateDiff(parseDate(getCurrentDate()), parseDate("12/20/2024"));
+
+    function getLocal() {
+        // document.getElementById('inTotal').focus();
+        document.getElementById('date').innerHTML = getCurrentDate();
+        document.getElementById('dayRemaing').innerHTML = "\n" + days_remaining
+
+
+        //Unused rn (localStorage)
+        // if (typeof(Storage) !== "undefined") {
+        //     for (var i = 0; i < localStorage.length; i++){
+        //         console.log("STORAGE:\n")
+        //         console.log(localStorage.key(i))
+        //         // do something with localStorage.getItem(localStorage.key(i));
+        //     }
+        // } else {
+        //     console.log("no localStorage support");
+        // }
+
+        //
+        if (!localStorage.getItem('trans_list')) {
+            // If it doesn't exist, initialize an empty list
+            localStorage.setItem('trans_list', JSON.stringify(transaction_list_prod));
+        } else {
+            // If it exists, retrieve the existing
+            transaction_list_prod = JSON.parse(localStorage.getItem('trans_list'));
+            for (let i = 0; i < transaction_list_prod.length; i++){
+                if (transaction_list_prod[i].type == "pos"){
+                    init += parseFloat(transaction_list_prod[i].amount)
+                }else{
+                    init -= parseFloat(transaction_list_prod[i].amount)
+                }
+            }
+            document.getElementById('cA').innerHTML = init.toFixed(2);
+            console.log('List already exists:', transaction_list_prod);
+        }
+        console.log(transaction_list_prod);
+        let new_item = "";
+        for (let i = transaction_list_prod.length - 1; i >= 0; i--){
+            new_item += `
+            <div class="trans_list_item">
+            <p>${transaction_list_prod[i].date}</p>
+            <p style="color:${transaction_list_prod[i].type == "pos" ? "green" : "red"}">${transaction_list_prod[i].type == "pos" ? "+" : "-"}${transaction_list_prod[i].amount}</p>
+            <i class="ti ti-trash" style="font-size:1em;color:red" onclick="deleteItem(transaction_list_prod)"></i>
+            </div>
+            `
+        }
+        document.getElementById('trans_list').innerHTML = new_item
+    }
+
+    function closeDialog(){
+        document.getElementById('dialog').close();
+        // document.getElementsByClassName('dialogDiv')[0].style = "background-color: rgba(0,0,0,0);"
+        document.getElementsByClassName('dialogDiv')[0].style.display = 'none';
+    }
+
+    function openDialog(){
+        document.getElementById('dialog').showModal();
+        document.getElementsByClassName('dialogDiv')[0].style.display = 'flex';
+        document.getElementById('amountInput').focus();
+    }
+
+    function getTransaction(){
+        let amountVar = document.getElementById('amountInput').value;
+        let trans_index = {
+            "date":getCurrentDate(),
+            "amount":amountVar,
+            "type":typing
+        }
+        transaction_list_prod.push(trans_index)
+        localStorage.setItem('trans_list', JSON. stringify(transaction_list_prod));
+        closeDialog();
+        location.reload();
+    }
+
+    function setTyping(type, index){
+        // console.log(document.getElementsByClassName('amountC'))
+        // typing = type;
+        // if(document.getElementsByClassName('amountC')[index].classList[3] == "active"){
+        //     document.getElementsByClassName('amountC')[index].classList.remove("active");
+        // }else{
+        //     document.getElementsByClassName('amountC')[index].classList.add("active");
+        // }
+
+        if (index >= 0 && index < document.getElementsByClassName('amountC').length) {
+            // Loop through all elements
+            for (let i = 0; i < document.getElementsByClassName('amountC').length; i++) {
+                if (i === index) {
+                    // Add 'active' class to the selected element
+                    typing = "neg"
+                    document.getElementsByClassName('amountC')[i].classList.add("active");
+                } else {
+                    // Remove 'active' class from all other elements
+                    typing = "pos"
+                    document.getElementsByClassName('amountC')[i].classList.remove("active");
+                }
+            }
+            // console.log(typing)
+        }
+    }
+
+    </script>
+</head>
+<body onload="getLocal()">
+    <div class="dialogDiv">
+        <dialog id="dialog" open>
+            <div class="modalDiv">
+                <div class="titleModalDiv">
+                    <div>New Transaction</div>
+                    <i class="ti ti-close" style="cursor:pointer" onclick="closeDialog()"></i>
+                </div>
+                <div class="transAmountDiv">
+                    <i class="amountC ti ti-plus active" onclick="setTyping('pos', 0)"></i>
+                    <div style="font-size:20px;margin-left:5px;margin-right:5px">/</div>
+                    <i class="amountC ti ti-minus" onclick="setTyping('neg', 1)"></i>
+
+                    <div style="font-size:25px;margin-right:5px;margin-left:5px">$</div>
+                    <input id="amountInput" style="height:30px;font-size:15px" type="text" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');" />
+
+                </div>
+                <input type="button" class="trans_button" value="Sumbit" onclick="getTransaction()"/>
+            </div>
+
+        </dialog>
+    </div>
     <div class="foreGround">
-      <div class="mainWindow">
-        <!-- Format Switches Section -->
-        <div class="dateChangers">
-          <div class="optionsBox active" id="inTotal" onclick="inTotalSwitch(inTotal)">
-            <div>In Total</div>
-            <i class="ti ti-time"></i>
-          </div>
-          <select id="viewOption" onclick="inTotalSwitch(this.value)" size="4">
-              <option value="" selected disabled>Choose an option</option>
-              <option value="perDay">Per Day</option>
-              <option value="perWeek">Per Week</option>
-              <option value="perMonth">Per Month</option>
-          </select>
-        </div>
+        <div class="mainWindow">
+            <!-- Format Switches Section -->
+            <div class="dateChangers">
+                <div class="optionsBox active" id="inTotal" onclick="inTotalSwitch(inTotal)">
+                    <div>In Total</div>
+                    <i class="ti ti-time"></i>
+                </div>
+                <select id="viewOption" onclick="inTotalSwitch(this.value)" size="4">
+                    <option value="" selected disabled>Choose an option</option>
+                    <option value="perDay">Per Day</option>
+                    <option value="perWeek">Per Week</option>
+                    <option value="perMonth">Per Month</option>
+                </select>
+            </div>
 
-        <!-- Date and days remaining section -->
-        <div style="display:flex;flex-direction:row;font-size:20px">
-          <div style="font-weight:lighter" id="dayRemaing"></div>
-          <div style="font-weight:lighter">&nbsp;days left</div>
-        </div>
-        <div style="font-size:30px;font-weight:500" id="date"></div>
+            <!-- Date and days remaining section -->
+            <div style="display:flex;flex-direction:row;font-size:20px">
+                <div style="font-weight:lighter" id="dayRemaing"></div>
+                <div style="font-weight:lighter">&nbsp;days left</div>
+            </div>
+            <div style="font-size:30px;font-weight:500" id="date"></div>
 
-        <!-- Current Money section -->
-        <div class="amountDiv">
-          <p class="currentAmount">$</p>
-          <p class="currentAmount" id="cA"></p>
-        </div>
-        <!-- Icon Section -->
-        <div class="icon">
-          <i class="ti ti-plus" style="font-size:2em;"></i>
-        </div>
-        <!-- Transactions Section -->
-        <div class="transactions">
-          <div class="trans_title">Transactions</div>
-          <hr style="border:3px solid black"/>
+            <!-- Current Money section -->
+            <div class="amountDiv">
+                <p class="currentAmount">$</p>
+                <p class="currentAmount" id="cA"></p>
+            </div>
 
-          <div class="trans_list" id="trans_list">
-          </div>
+            <!-- Icon Section -->
+            <div class="icon" onclick="openDialog()">
+                <i class="ti ti-plus" style="font-size:2em;"></i>
+            </div>
+
+            <!-- Transactions Section -->
+            <div class="transactions">
+                <div class="trans_title">Transactions</div>
+                <hr style="border:3px solid black"/>
+
+                <div class="trans_list" id="trans_list">
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <script type="text/javascript">
 
-      let amount = 2500;
-
-      function inTotalSwitch(option){
+    function inTotalSwitch(option){
         if (option.id === "inTotal") {
-            console.log("selected")
             document.getElementById("viewOption").style = ""
             document.getElementById("inTotal").className = "optionsBox active"
-            document.getElementById('cA').innerHTML = amount
-            } else {
-                document.getElementById("inTotal").className = "optionsBox"
-                document.getElementById("viewOption").value = option;
-                // console.log(option)
-            }
-
-
-            // document.getElementById('cA').innerHTML = (amount/120).toFixed(2);
-            // document.getElementById(option.id).className = "optionBoxSelected";
+            document.getElementById('cA').innerHTML = total
+        } else {
+            document.getElementById("inTotal").className = "optionsBox"
+            document.getElementById("viewOption").value = option;
+        }
 
         //Switches class name depending on button is clicked
         //Need to switch amount shown
         //Dont need to set amount to add/remove because the only amount needed is the main
 
         switch (option) {
-          case "perDay":
-            // document.getElementById("perDay").className = "optionsBox"
-            document.getElementById('cA').innerHTML = (amount/days_remaining).toFixed(2)
-            document.getElementById("viewOption").style = "background-color: #2980b9"
-            break;
-          case "perWeek":
-
-            // Work on this (show highlight css when cliked dropdown)
-            document.getElementById('cA').innerHTML = (amount/(days_remaining/7)).toFixed(2)
-            document.getElementById("viewOption").style = "background-color: #2980b9"
-            break;
-          case "perMonth":
-            // document.getElementById("perWeek").className = "optionsBox"
-            document.getElementById('cA').innerHTML = (amount/(days_remaining/30.44)).toFixed(2)
-            document.getElementById("viewOption").style = "background-color: #2980b9"
-            break;
+            case "perDay":
+                // document.getElementById("perDay").className = "optionsBox"
+                document.getElementById('cA').innerHTML = (init/days_remaining).toFixed(2)
+                document.getElementById("viewOption").style = "background-color: #2980b9"
+                break;
+            case "perWeek":
+                // Work on this (show highlight css when cliked dropdown)
+                document.getElementById('cA').innerHTML = (init/(days_remaining/7)).toFixed(2)
+                document.getElementById("viewOption").style = "background-color: #2980b9"
+                break;
+            case "perMonth":
+                // document.getElementById("perWeek").className = "optionsBox"
+                document.getElementById('cA').innerHTML = (init/(days_remaining/30.44)).toFixed(2)
+                document.getElementById("viewOption").style = "background-color: #2980b9"
+                break;
         }
-       //  let thing = option.id != "inTotal" ?
-       //  (document.getElementById("inTotal").className = "optionsBox",
-       //  document.getElementById('cA').innerHTML = (amount/120).toFixed(2))
-       //   : (document.getElementById("perDay").className = "optionsBox",
-       // document.getElementById('cA').innerHTML = amount);
-      }
+    }
     </script>
-  </body>
+</body>
 </html>
-`
